--- a/application/admin/view/menus/index.html
+++ b/application/admin/view/menus/index.html
@@ -4,6 +4,7 @@
 <link href="__STATIC__/assets/global/plugins/jquery-nestable/jquery.nestable.css" rel="stylesheet" type="text/css"/>
 {/block}
 
+{block name="main"}
 <div class="row" id="menu">
     <div class="col-md-6">
         <div class="portlet light bordered">
@@ -39,13 +40,16 @@
 
 {include file="menus:node" /}
 
+{/block}
+
 {block name="script"}
 <script>
     var nodes = '{$nodes|raw}';
     var data = '{$data|raw}';
 </script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
 <script src="__STATIC__/assets/global/plugins/jquery-nestable/jquery.nestable.js" type="text/javascript"></script>
-<script src="__STATIC__/admin/js/manage/tree.js" rel="stylesheet" type="text/javascript"></script>
-<script src="__STATIC__/admin/js/manage/menu.js" rel="stylesheet" type="text/javascript"></script>
+<script src="__STATIC__/admin/js/tree.js" rel="stylesheet" type="text/javascript"></script>
+<script src="__STATIC__/admin/js/menu.js" rel="stylesheet" type="text/javascript"></script>
 {/block}
 
