--- a/application/admin/view/public/_sidebar.html
+++ b/application/admin/view/public/_sidebar.html
@@ -26,27 +26,7 @@
             <li class="heading">
                 <h3 class="uppercase">Layouts</h3>
             </li>
-            <li class="nav-item  active open">
-                <a href="javascript:;" class="nav-link nav-toggle">
-                    <i class="icon-layers"></i>
-                    <span class="title">Page Layouts</span>
-                    <span class="selected"></span>
-                    <span class="arrow open"></span>
-                </a>
-                <ul class="sub-menu">
-                    <li class="nav-item  active open">
-                        <a href="layout_blank_page.html" class="nav-link ">
-                            <span class="title">Blank Page</span>
-                            <span class="selected"></span>
-                        </a>
-                    </li>
-                    <li class="nav-item  ">
-                        <a href="layout_classic_page_head.html" class="nav-link ">
-                            <span class="title">Classic Page Head</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
+            {$menu|raw}
         </ul>
     </div>
 </div>
