面包屑导航

--- a/application/admin/view/public/_breadcrumb.html
+++ b/application/admin/view/public/_breadcrumb.html
@@ -1,16 +1,15 @@
 <div class="page-bar">
     <ul class="page-breadcrumb">
-        <li>
-            <a href="index.html">Home</a>
-            <i class="fa fa-circle"></i>
-        </li>
-        <li>
-            <a href="#">Blank Page</a>
-            <i class="fa fa-circle"></i>
-        </li>
-        <li>
-            <span>Page Layouts</span>
-        </li>
+        {volist name="crumb" id="c"}
+            <li>
+                {eq name="c.route" value=""}
+                    <span>{$c.name}</span>
+                    <i class="fa fa-angle-right"></i>
+                    {else/}
+                    <a href="/{$c.route}" class="font-green-sharp">{$c.name}</a>
+                {/eq}
+            </li>
+        {/volist}
     </ul>
     <div class="page-toolbar">
         <div class="btn-group pull-right">
