--- a/application/admin/view/layout/_css.html
+++ b/application/admin/view/layout/_css.html
@@ -20,3 +20,7 @@
       id="style_color"/>
 <link href="__STATIC__/assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css"/>
 <!-- END THEME LAYOUT STYLES -->
+
+<!-- BEGIN PAGE LEVEL PLUGINS -->
+<link href="__STATIC__/assets/global/plugins/bootstrap-sweetalert/sweetalert.css" rel="stylesheet" type="text/css" />
+<!-- END PAGE LEVEL PLUGINS -->
