--- a/application/admin/view/layout/_header.html
+++ b/application/admin/view/layout/_header.html
@@ -4,7 +4,7 @@
         <!-- BEGIN LOGO -->
         <div class="page-logo">
             <a href="index.html">
-                <img src="../assets/layouts/layout/img/logo.png" alt="logo" class="logo-default"/> </a>
+                <img src="__STATIC__/assets/layouts/layout/img/logo.png" alt="logo" class="logo-default"/> </a>
             <div class="menu-toggler sidebar-toggler">
                 <span></span>
             </div>
