--- a/application/admin/view/layout/_js.html
+++ b/application/admin/view/layout/_js.html
@@ -22,3 +22,7 @@
 <script src="__STATIC__/assets/layouts/global/scripts/quick-sidebar.min.js" type="text/javascript"></script>
 <script src="__STATIC__/assets/layouts/global/scripts/quick-nav.min.js" type="text/javascript"></script>
 <!-- END THEME LAYOUT SCRIPTS -->
+<!-- BEGIN PAGE LEVEL PLUGINS -->
+<script src="__STATIC__/assets/global/plugins/bootstrap-sweetalert/sweetalert.min.js" type="text/javascript"></script>
+<script src="__STATIC__/assets/pages/scripts/ui-sweetalert.min.js" type="text/javascript"></script>
+<!-- END PAGE LEVEL PLUGINS -->
