--- a/application/admin/view/menus/form.html
+++ b/application/admin/view/menus/form.html
@@ -1,7 +1,7 @@
 <form role="form">
     <div class="form-body">
         <div class="form-group form-md-line-input form-md-floating-label">
-            <input type="text" :class="[{ 'edited': node.title }, 'form-control']" v-model="node.name">
+            <input type="text" :class="[{ 'edited': node.name }, 'form-control']" v-model="node.name">
             <label>栏目</label>
             <span class="help-block">节点名称</span>
         </div>
