--- a/application/admin/view/admins/index.html
+++ b/application/admin/view/admins/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>a
-a
-</body>
-</html>
+{extend name="layout/_base" /}
+
+{block name="css"}
+
+{/block}
+
+{block name="main"}
+{/block}
+
+{block name="script"}
+{/block}
